@@ -1,12 +1,12 @@
 Package: MatrixModels
-Version: 0.2-0
-Date: 2010-08-09
+Version: 0.2-1
+Date: 2010-08-23
 Title: Modelling with Sparse And Dense Matrices
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
 Description: Modelling with sparse and dense 'Matrix' matrices, using
   modular prediction and response module classes.
-Depends: R (>= 2.10.1), stats, utils, methods, Matrix (>= 0.999375-43)
+Depends: R (>= 2.10.1), stats, utils, methods, Matrix (>= 0.999375-44)
 notyetImports: stats4
 LazyLoad: yes
 Encoding: UTF-8
